current version; message generated automatically on: Linux nl6 (brandenb)

--- a/doc/citations/notes.tex
+++ b/doc/citations/notes.tex
@@ -126,7 +126,7 @@ In addition, 138 papers reference it for code comparison or other purposes %(202
 \begin{description}
 \item %YEAR
 33 times in 2025 \citep{
-2025arXiv250721832K,%Koshikumo+ "Magnetic flux transport via reconnection diffusion in different sonic regimes of interstellar MHD turbulence"
+2025MNRAS.542..884K,%Koshikumo+ "Magnetic flux transport via reconnection diffusion in different sonic regimes of interstellar MHD turbulence"
 2025PhRvD.111d3541V,%Vachaspati+Brandenburg "Spectra of magnetic fields from electroweak symmetry breaking"
 2025arXiv250610435G,%Godines+ "On the Mass Budget Problem of Protoplanetary Disks: Streaming Instability and Optically Thick Emission"
 2025arXiv250620538I,%Iarygina+ "Schwinger effect in axion inflation on a lattice"
@@ -1001,7 +1001,7 @@ The {\sc Pencil Code} has been used for the following research topics
 
 \item % r e c o n  &  S S d y n
 {\em Small-scale dynamos and reconnection} \citep{
-2025arXiv250721832K,%Koshikumo+ "Magnetic flux transport via reconnection diffusion in different sonic regimes of interstellar MHD turbulence"
+2025MNRAS.542..884K,%Koshikumo+ "Magnetic flux transport via reconnection diffusion in different sonic regimes of interstellar MHD turbulence"
 2025arXiv250217178K,%Kishore+Singh "Rotational effects on the small-scale dynamo"
 2025arXiv250502885B,%Brandenburg+Ntormousi "Magnetic field amplification during a turbulent collapse"
 2025A&A...696A..93W,%Warnecke+ "Small-scale and large-scale dynamos in global convection simulations of solar-like stars"
