--- a/doc/citations/ref.bib
+++ b/doc/citations/ref.bib
@@ -17074,4 +17074,22 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2025MNRAS.542..884K,
+       author = {{Koshikumo}, C.~N. and {Santos-Lima}, R. and {del Valle}, M.~V. and {de Gouveia Dal Pino}, E.~M. and {Guerrero}, G. and {Lazarian}, A.},
+        title = "{Magnetic flux transport via reconnection diffusion in different sonic regimes of interstellar MHD turbulence}",
+      journal = {\mnras},
+     keywords = {turbulence, MHD, methods: numerical, ISM: magnetic field, High Energy Astrophysical Phenomena, Astrophysics of Galaxies, Solar and Stellar Astrophysics},
+         year = 2025,
+        month = sep,
+       volume = {542},
+       number = {2},
+        pages = {884-901},
+          doi = {10.1093/mnras/staf1279},
+archivePrefix = {arXiv},
+       eprint = {2507.21832},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025MNRAS.542..884K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
