added option to not correct penc u when using conservative approach, this recovers the reference data of rel-shock sample, which uses p%del2u for viscous force as del2 T0i by choosing lcorrect_penc_u=F

--- a/samples/1d-tests/rel-shock/README
+++ b/samples/1d-tests/rel-shock/README
@@ -9,6 +9,7 @@ Added:
 Status:
     succeeds # One of [succeeds|failing since <date>|obsolete| ...]
     29-May-2025: After Alberto's change, the old data can be reproduced with lrelativistic_eos=T
+    11-Sep-2025: After Alberto's change, the old data can be reproduced with lcorrect_penc_u=F
 Recommended resolution:
     4608x1x1
 References:
