Mark sample as succeeding

--- a/samples/power_xy/complex_lpowerxyhdf5/nprocx_2/README
+++ b/samples/power_xy/complex_lpowerxyhdf5/nprocx_2/README
@@ -7,6 +7,6 @@ Maintainer:
 Added:
     06-Oct-2025
 Status:
-    failing (running, segmentation fault) # One of [succeeds|failing since <date>|obsolete| ...]
+    succeeds # One of [succeeds|failing since <date>|obsolete| ...]
 Comments:
     Variant of samples/power_xy/complex_lpowerxy_hdf5 with different parallelization
