Make line breaks work for URLs.

--- a/doc/quick-guide/quick_start.tex
+++ b/doc/quick-guide/quick_start.tex
@@ -20,7 +20,6 @@
 \usepackage{color}
 \RequirePackage{hyperref}
 \hypersetup{
-	breaklinks = true,
 	colorlinks = true,
 	linkcolor = blue,
 	citecolor = green,
@@ -28,6 +27,7 @@
 	urlcolor = red,
 	pdfborder = {0 0 0}
 }
+\usepackage[hyphenbreaks]{breakurl}
 %\usepackage{fmtcount}
 \usepackage{parskip}
 
