current version; message generated automatically on: Linux nl6 (brandenb)

--- a/doc/citations/notes.tex
+++ b/doc/citations/notes.tex
@@ -67,7 +67,9 @@ As of September 2024, the {\sc Pencil Code} has been used for a total of
 %AB: 34 more papers in 2023
 %710 research papers; see Figure~\ref{ptimes};
 %AB: 46 more papers in 2024 (?)
-736 research papers; see Figure~\ref{ptimes};
+%736 research papers; see Figure~\ref{ptimes};
+%AB: 46 more papers in 2025
+764 research papers; see Figure~\ref{ptimes};
 %168 of those are papers (40\%) are not co-authored by Brandenburg.
 %AB: 8 more
 %174 of those are papers (40\%) are not co-authored by Brandenburg. %(2017)
@@ -82,7 +84,8 @@ As of September 2024, the {\sc Pencil Code} has been used for a total of
 %289 of those are papers (47\%) are not co-authored by Brandenburg. %(2021)
 %298 of those are papers (46\%) are not co-authored by Brandenburg. %(2022)
 %343 of those are papers (49\%) are not co-authored by Brandenburg. %(2023)
-379 of those are papers (51\%) are not co-authored by Brandenburg. %(2024)
+%379 of those are papers (51\%) are not co-authored by Brandenburg. %(2024)
+401 of those are papers (52\%) are not co-authored by Brandenburg. %(2025)
 %In addition, 54 papers reference it for code comparison or other purposes
 %AB: 3 more
 %In addition, 57 papers reference it for code comparison or other purposes %(2017)
@@ -96,7 +99,8 @@ As of September 2024, the {\sc Pencil Code} has been used for a total of
 %In addition, 98 papers reference it for code comparison or other purposes %(2021)
 %In addition, 102 papers reference it for code comparison or other purposes %(2022)
 %In addition, 109 papers reference it for code comparison or other purposes %(2023)
-In addition, 138 papers reference it for code comparison or other purposes %(2024)
+%In addition, 138 papers reference it for code comparison or other purposes %(2024) [wrong numbers]
+In \textit{addition}, 137 papers reference it for code comparison or other purposes %(2025)
 (see the red line).
 }
 %
@@ -125,7 +129,11 @@ In addition, 138 papers reference it for code comparison or other purposes %(202
 % WO=without Brandenburg, COM=code comparison papers
 \begin{description}
 \item %YEAR
-33 times in 2025 \citep{
+37 times in 2025 \citep{
+2025JPlPh..91E...5B,%Brandenburg+Banerjee "Turbulent magnetic decay controlled by two conserved quantities"
+2025arXiv250921141Z,%Zhang+Brandenburg "Resistive Scaling in the Magnetic Helicity-Driven Inverse Cascade"
+2025ApJ...990..223B,%Brandenburg+Ntormousi "Magnetic Field Amplification during a Turbulent Collapse"
+2025A&A...701A.185T,%Tschernitz+Bourdin "Kinematic viscosity in solar convection simulations"
 2025MNRAS.542..884K,%Koshikumo+ "Magnetic flux transport via reconnection diffusion in different sonic regimes of interstellar MHD turbulence"
 2025PhRvD.111d3541V,%Vachaspati+Brandenburg "Spectra of magnetic fields from electroweak symmetry breaking"
 2025arXiv250610435G,%Godines+ "On the Mass Budget Problem of Protoplanetary Disks: Streaming Instability and Optically Thick Emission"
@@ -147,10 +155,10 @@ In addition, 138 papers reference it for code comparison or other purposes %(202
 2025ApJ...985...18R,%Rogachevskii+ "Theory of the Kinetic Helicity Effect on Turbulent Diffusion of Magnetic and Scalar Fields"
 2025ApJ...984...88B,%Brandenburg+ "Helicity Effect on Turbulent Passive and Active Scalar Diffusivities"
 2025JCAP...05..079S,%Sharma+ "Lattice simulations of axion-U(1) inflation: gravitational waves, magnetic fields, and black holes"
-2025arXiv250502885B,%Brandenburg+Ntormousi "Magnetic field amplification during a turbulent collapse"
 2025arXiv250503660M,%Mondal+ "Understanding large-scale dynamos in unstratified rotating shear flows"
 2025MNRAS.539.3421R,%Rice+ "Dust density enhancements and the direct formation of planetary cores in gravitationally unstable discs"
 2025MNRAS.540..532Q,%Qazi "Non-linear magnetic buoyancy instability and galactic dynamos"
+2025arXiv250906173Q,%Qazi+ "Mathematical Aspects of Geophysical and Astrophysical Fluid Dynamics: Magnetic buoyancy instability in galaxies"
 2025A&A...693A..89P,%Pandey+Bourdin "Investigating numerical stability by scaling heat conduction in a 1D hydrodynamic model of the solar atmosphere"
 2025AAS...24540206M,%Meftah "Hydrodynamic simulations of multiple low-mass migrating black holes in AGN disks"
 2025PhRvD.111b3021P,%Park "Effect of turbulent kinetic helicity on diffusive beta effect for large scale dynamo"
@@ -160,9 +168,8 @@ In addition, 138 papers reference it for code comparison or other purposes %(202
 2025A&A...694A..39D,%Dehman+Brandenburg "Reality of Inverse Cascading in Neutron Star Crusts"
 2025MNRAS.536.1625S%Shi+ "Kinetic field theory applied to planetesimal formation I: freely streaming dust particles"
 }, \item %YEAR
-40 times in 2024 \citep{
+38 times in 2024 \citep{
 2024GMS...283..179C,%Candelaresi+Del Sordo "Stability of plasmas through magnetic helicity"
-BB24,
 2024AGUFMSH13B2928M,%Maity+ "On the Evolution of Reconnection Flux in Erupting Magnetic Flux Ropes: Insights from Observations and MHD Simulation"
 2024arXiv241112953Z,%Zhou+Lai "Understanding the UV/Optical Variability of AGNs through Quasi-Periodic Large-scale Magnetic Dynamos"
 2024PhFl...36k5152L,%Lipatnikov "A priori assessment of a simple approach to evaluating burning rate in large eddy simulations of premixed turbulent combustion"
@@ -180,7 +187,6 @@ BB24,
 2024LRCA...10....3K,%Korpi-Lagg+ "Computational approaches to modeling dynamos in galaxies"
 2024ApJ...970L..19L,%Lyra+ "Rapid Protoplanet Formation in Vortices: Three-dimensional Local Simulations with Self-gravity"
 2024ApJ...977..128M,%Mtchedlidze+ "Intergalactic medium rotation measure of primordial magnetic fields"
-2024arXiv240611798B,%Brandenburg+Banerjee "Turbulent magnetic decay controlled by two conserved quantities"
 2024ApJ...966...90S,%Sengupta+ "Length and Velocity Scales in Protoplanetary Disk Turbulence"
 2024JFM...979A..46S,%Saieed+Hickey "Viscosity-modulated clustering of heated bidispersed particles in a turbulent gas"
 2024PComI..4005315W,%Wang+ "Particle-resolved numerical simulations of char particle combustion in isotropic turbulence"
@@ -244,7 +250,7 @@ BB24,
 2023arXiv231109082K%Kapyla "Effects of rotation and surface forcing on deep stellar convection zones"
 },\item
 \item %YEAR
-38 times in 2022 \citep{
+39 times in 2022 \citep{
 2024AGUFMSH13B2928M,%Maity+ "On the Evolution of Reconnection Flux in Erupting Magnetic Flux Ropes: Insights from Observations and MHD Simulation"
 2022NatPh..18..595D,%Dey+ "Polymeric jets throw light on the origin and nature of the forest of solar spicules"
 2022zndo...5807020C,%Chatterjee+Dey "Configuration files for simulations of the solar spicule forest"
@@ -1003,10 +1009,11 @@ The {\sc Pencil Code} has been used for the following research topics
 {\em Small-scale dynamos and reconnection} \citep{
 2025MNRAS.542..884K,%Koshikumo+ "Magnetic flux transport via reconnection diffusion in different sonic regimes of interstellar MHD turbulence"
 2025arXiv250217178K,%Kishore+Singh "Rotational effects on the small-scale dynamo"
-2025arXiv250502885B,%Brandenburg+Ntormousi "Magnetic field amplification during a turbulent collapse"
+2025ApJ...990..223B,%Brandenburg+Ntormousi "Magnetic Field Amplification during a Turbulent Collapse"
 2025A&A...696A..93W,%Warnecke+ "Small-scale and large-scale dynamos in global convection simulations of solar-like stars"
 2024ApJ...961....7G,%Gent+ "Transition from small-scale to large-scale dynamo in a supernova-driven, multiphase medium"
 2024arXiv240115860Z,%Zhou+Jingade "Correlation times of velocity and kinetic helicity fluctuations in nonhelical hydrodynamic turbulence"
+2025arXiv250906173Q,%Qazi+ "Mathematical Aspects of Geophysical and Astrophysical Fluid Dynamics: Magnetic buoyancy instability in galaxies"
 2025MNRAS.540..532Q,%Qazi "Non-linear magnetic buoyancy instability and galactic dynamos"
 2024MNRAS.527.7994Q,%Qazi+ "Nonlinear magnetic buoyancy instability and turbulent dynamo"
 2023Atmos..14..932B,%Brandenburg+Larsson "Turbulence with Magnetic Helicity That Is Absent on Average"
@@ -1042,9 +1049,10 @@ The {\sc Pencil Code} has been used for the following research topics
 
 \item %p r i m o r d i a l,   d e c a y i n g,  c o s m o
 {\em Primordial magnetic fields and decaying turbulence} \citep{
+2025arXiv250921141Z,%Zhang+Brandenburg "Resistive Scaling in the Magnetic Helicity-Driven Inverse Cascade"
 2025A&A...694A..39D,%Dehman+Brandenburg "Reality of Inverse Cascading in Neutron Star Crusts"
 2025PhRvD.111d3541V,%Vachaspati+Brandenburg "Spectra of magnetic fields from electroweak symmetry breaking"
-2024arXiv240611798B,%Brandenburg+Banerjee "Turbulent magnetic decay controlled by two conserved quantities"
+2025JPlPh..91E...5B,%Brandenburg+Banerjee "Turbulent magnetic decay controlled by two conserved quantities"
 2024OJAp....7E..75D,%Dwivedi+ "Quasi-two-dimensionality of three-dimensional, magnetically dominated, decaying turbulence"
 2024A&A...687A.186B,%Brandenburg+ "Resistively controlled primordial magnetic turbulence decay"
 2023arXiv230704602B,%Brandenburg "Inverse cascading for initial MHD turbulence spectra between Saffman and Batchelor"
@@ -1544,6 +1552,7 @@ The {\sc Pencil Code} has been used for the following research topics
 2023A&A...678A..82O,%Ortiz-Rodriguez+ "Simulations of dynamo action in slowly rotating M dwarfs: Dependence on dimensionless parameters"
 2022cosp...44.2553T,%Tschernitz+Bourdin "Influence of the kinematic viscosity on solar convection simulations"
 2025ApJ...979L..39T,%Tschernitz+Bourdin "Granulation and Convectional Driving on Stellar Surfaces"
+2025A&A...701A.185T,%Tschernitz+Bourdin "Kinematic viscosity in solar convection simulations"
 2022arXiv220606566M,%Masada+Sano "Rotational Dependence of Large-scale Dynamo in Strongly-stratified Convection: What Causes It?"
 2022BAAA...63...62O,%Ortiz-Rodriguez+ "Simulations of fully convective M dwarfs: dynamo action with varying magnetic Prandtl numbers"
 2022ApJ...931L..17K,%Kapyla+ "Solar-like dynamos and rotational scaling of cycles from star-in-a-box simulations"
@@ -1795,7 +1804,12 @@ Zhang_etal_2020comb,%Zhang+ "Drag force for a burning particle"
 The {\sc Pencil Code} has been quoted in other papers either for
 detailed code comparison, in connection with related work,
 or in comparison with other codes \citep{
-2025arXiv250708436L,%Lebreuilly+ "The Rosetta Stone Project. I. A suite of radiative magnetohydrodynamics simulations of high-mass star-forming clumps"
+2025arXiv251012203F,%Federrath+Offner "Computational advances and challenges in simulations of turbulence and star formation"
+2025ApJS..280...48L,%Luo+Fan "The Yin{\textendash}Yang Magnetic Flux Eruption (Yin{\textendash}Yang MFE) Code: A Global Corona Magnetohydrodynamic Code with the Yin{\textendash}Yang Grid"
+2025arXiv250906699P,%Pons+ "Magnetic, thermal and rotational evolution of isolated neutron stars"
+2025MNRAS.542..884K,%Koshikumo "Magnetic flux transport via reconnection diffusion in different sonic regimes of interstellar MHD turbulence"
+2025arXiv250805858U,%Umurhan+ "Evidence For Turbulent Concentration In Particle-Laden Midplane Layers of Planet-Forming Disks"
+2025A&A...701A.217L,%Lebreuilly+ "The Rosetta Stone Project: I. A suite of radiative magnetohydrodynamics simulations of high-mass star-forming clumps"
 2025arXiv250800694A,%Abramson+ "Forward cascade of large-scale primordial magnetic fields during structure formation"
 2025ApJS..279....6H,%Hunana "Generalized Fluid Models of the Braginskii Type. II. The Boltzmann Operator"
 2025arXiv250708436L,%Lebreuilly+ "The Rosetta Stone Project. I. A suite of radiative magnetohydrodynamics simulations of high-mass star-forming clumps"
