--- a/doc/citations/ref.bib
+++ b/doc/citations/ref.bib
@@ -16186,25 +16186,22 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{BB24,
-       author = {{Brandenburg}, A. and {Banerjee}, A.},
+@ARTICLE{2025JPlPh..91E...5B,
+       author = {{Brandenburg}, Axel and {Banerjee}, Aikya},
         title = "{Turbulent magnetic decay controlled by two conserved quantities}",
-      journal = {J. Plasma Phys.},
-     keywords = {Physics - Plasma Physics},
+      journal = {Journal of Plasma Physics},
+     keywords = {astrophysical plasmas, plasma simulation, Physics - Plasma Physics},
          year = 2025,
-        month = feb,
+        month = jan,
        volume = {91},
        number = {1},
           eid = {E5},
         pages = {E5},
           doi = {10.1017/S0022377824001508},
-          eid = {arXiv:2406.11798},
-        pages = {arXiv:2406.11798},
-          doi = {10.48550/arXiv.2406.11798},
 archivePrefix = {arXiv},
        eprint = {2406.11798},
  primaryClass = {physics.plasm-ph},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2024arXiv240611798B},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025JPlPh..91E...5B},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -17092,4 +17089,159 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2025arXiv251012203F,
+       author = {{Federrath}, Christoph and {Offner}, Stella},
+        title = "{Computational advances and challenges in simulations of turbulence and star formation}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics of Galaxies, Instrumentation and Methods for Astrophysics, Solar and Stellar Astrophysics, Computational Physics, Fluid Dynamics},
+         year = 2025,
+        month = oct,
+          eid = {arXiv:2510.12203},
+        pages = {arXiv:2510.12203},
+          doi = {10.48550/arXiv.2510.12203},
+archivePrefix = {arXiv},
+       eprint = {2510.12203},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251012203F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025ApJS..280...48L,
+       author = {{Luo}, Hongyang and {Fan}, Yuhong},
+        title = "{The Yin{\textendash}Yang Magnetic Flux Eruption (Yin{\textendash}Yang MFE) Code: A Global Corona Magnetohydrodynamic Code with the Yin{\textendash}Yang Grid}",
+      journal = {\apjs},
+     keywords = {Magnetohydrodynamical simulations, Magnetohydrodynamics, 1966, 1964, Solar and Stellar Astrophysics},
+         year = 2025,
+        month = oct,
+       volume = {280},
+       number = {2},
+          eid = {48},
+        pages = {48},
+          doi = {10.3847/1538-4365/adf8d1},
+archivePrefix = {arXiv},
+       eprint = {2508.08210},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJS..280...48L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250921141Z,
+       author = {{Zhang}, Jiyao and {Brandenburg}, Axel},
+        title = "{Resistive Scaling in the Magnetic Helicity-Driven Inverse Cascade}",
+      journal = {arXiv e-prints},
+     keywords = {Cosmology and Nongalactic Astrophysics},
+         year = 2025,
+        month = sep,
+          eid = {arXiv:2509.21141},
+        pages = {arXiv:2509.21141},
+          doi = {10.48550/arXiv.2509.21141},
+archivePrefix = {arXiv},
+       eprint = {2509.21141},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250921141Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250906699P,
+       author = {{Pons}, Jos{\'e} A. and {Dehman}, Clara and {Vigan{\`o}}, Daniele},
+        title = "{Magnetic, thermal and rotational evolution of isolated neutron stars}",
+      journal = {arXiv e-prints},
+     keywords = {High Energy Astrophysical Phenomena, Instrumentation and Methods for Astrophysics, General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2025,
+        month = sep,
+          eid = {arXiv:2509.06699},
+        pages = {arXiv:2509.06699},
+          doi = {10.48550/arXiv.2509.06699},
+archivePrefix = {arXiv},
+       eprint = {2509.06699},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250906699P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250906173Q,
+       author = {{Qazi}, Yasin and {Shukurov}, Anvar and {Tharakkal}, Devika and {Gent}, Frederick A.},
+        title = "{Mathematical Aspects of Geophysical and Astrophysical Fluid Dynamics: Magnetic buoyancy instability in galaxies}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics of Galaxies},
+         year = 2025,
+        month = sep,
+          eid = {arXiv:2509.06173},
+        pages = {arXiv:2509.06173},
+          doi = {10.48550/arXiv.2509.06173},
+archivePrefix = {arXiv},
+       eprint = {2509.06173},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250906173Q},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025ApJ...990..223B,
+       author = {{Brandenburg}, Axel and {Ntormousi}, Evangelia},
+        title = "{Magnetic Field Amplification during a Turbulent Collapse}",
+      journal = {\apj},
+     keywords = {Magnetic fields, 994, Astrophysics of Galaxies, Fluid Dynamics},
+         year = 2025,
+        month = sep,
+       volume = {990},
+       number = {2},
+          eid = {223},
+        pages = {223},
+          doi = {10.3847/1538-4357/adf725},
+archivePrefix = {arXiv},
+       eprint = {2505.02885},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...990..223B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025A&A...701A.217L,
+       author = {{Lebreuilly}, Ugo and {Traficante}, Alessio and {Nucara}, Alice and {Tung}, Ngo-Duy and {Hennebelle}, Patrick and {Molinari}, Sergio and {Klessen}, Ralf S. and {Testi}, Leonardo and {Pelkonen}, Veli-Matti and {Benedettini}, Milena and {Coletta}, Alessandro and {Elia}, Davide and {Mininni}, Chiara and {Pezzuto}, Stefania and {Soler}, Juan D. and {Suin}, Paolo and {Toci}, Claudia},
+        title = "{The Rosetta Stone Project: I. A suite of radiative magnetohydrodynamics simulations of high-mass star-forming clumps}",
+      journal = {\aap},
+     keywords = {magnetohydrodynamics (MHD), radiative transfer, turbulence, stars: protostars, ISM: clouds, ISM: magnetic fields, Solar and Stellar Astrophysics, Astrophysics of Galaxies, Instrumentation and Methods for Astrophysics},
+         year = 2025,
+        month = sep,
+       volume = {701},
+          eid = {A217},
+        pages = {A217},
+          doi = {10.1051/0004-6361/202554774},
+archivePrefix = {arXiv},
+       eprint = {2507.08436},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025A&A...701A.217L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025A&A...701A.185T,
+       author = {{Tschernitz}, Johannes and {Bourdin}, Philippe-A.},
+        title = "{Kinematic viscosity in solar convection simulations}",
+      journal = {\aap},
+     keywords = {convection, methods: numerical, Sun: granulation},
+         year = 2025,
+        month = sep,
+       volume = {701},
+          eid = {A185},
+        pages = {A185},
+          doi = {10.1051/0004-6361/202452583},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025A&A...701A.185T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv250805858U,
+       author = {{Umurhan}, Orkan M. and {Sengupta}, Debanjan and {Estrada}, Paul R.},
+        title = "{Evidence For Turbulent Concentration In Particle-Laden Midplane Layers of Planet-Forming Disks}",
+      journal = {arXiv e-prints},
+     keywords = {Earth and Planetary Astrophysics},
+         year = 2025,
+        month = aug,
+          eid = {arXiv:2508.05858},
+        pages = {arXiv:2508.05858},
+          doi = {10.48550/arXiv.2508.05858},
+archivePrefix = {arXiv},
+       eprint = {2508.05858},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv250805858U},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
