--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -341,6 +341,7 @@
 \newcommand{\Gyr}{\,{\rm Gyr}}
 \newcommand{\kms}{\,{\rm km\,s}^{-1}}
 \newcommand{\kpc}{\,{\rm kpc}}
+\def\half{\textstyle{\frac{1}{2}}}
 
 \newcommand{\Bhat}{\hat{B}}
 \newcommand{\BBhat}{\hat{\vec{B}}}
@@ -5870,7 +5871,7 @@ where $\rho_{\rm e}$ is obtained through time-integration of
 the charge continuity equation,
 \begin{equation}
 \frac{\partial\rho_{\rm e}}{\partial t}=-\Div\Jv,
-\label{dEdt}
+\label{dEdt2}
 \end{equation}
 which, in turn, follows from Eq.~(\ref{dEdt}) by taking its divergence.
 
@@ -6091,6 +6092,77 @@ $t_0$ to $t\to t+t_0$ for the runs with the smaller initial redshift.
 We see that the curves for $z_\ast=4500$ and $10^6$ overlap well,
 although there is a very small difference at the very beginning of the
 runs with $z_\ast=4500$ relative to those with $z_\ast=10^6$.
+
+% ---------------------------------------------------------------------- %
+
+\subsection{Scale factor at the end of reheating}
+\index{Reheating}
+
+At the end of cosmological inflation, during what is called reheating,
+the scale factor changes from a quadratic to a linear growth profile.
+A smooth function $a(t)$ is obtained by solving the Friedmann
+equations for a piecewise constant equation of state, $w(a)$, which
+relates the pressure with the density through $p=w\rho$.
+Under the assumption of zero curvature, i.e., the Universe is conformally
+flat, but expanding, the Friedmann equations can be written as a single
+equation which, in physical time, takes the form
+\begin{equation}
+a^{-1}\,\dd^2a/\dd t_{\rm phys}^2
+=-\half H^2\left[1+3w(a)\right],
+\end{equation}
+where $H=a^{-1}\dd a/\dd t_{\rm phys}$ is the standard Hubble parameter.
+Here, $w(a)=1/3$ during the radiation-dominated era and $w(a)=0$ during
+reheating when there were no photons, which is therefore equivalent to the
+matter-dominated era that also occurs later after recombination and
+before the Universe began to accelerate again.
+The accelerated exponential expansion of the Universe during inflation,
+and also the late acceleration of the present Universe, correspond to
+$w=-1$, but this will not be considered in the present paper.
+
+It is convenient to solve the Friedmann equation with zero curvature
+in conformal time.
+It then takes the form $a''/a=\half{\cal H}^2\,(1-3w)$,
+where ${\cal H}=a'/a$ is the conformal Hubble parameter.
+It is related to the usual one, $H$, through
+${\cal H}=\dd a/\partial t_{\rm phys}=aH$.
+Note the opposite sign of the terms on the right-hand side and the
+opposite sign in front of $3w(a)$ compared to the formulation in terms
+of physical time.
+The equation for $a''$ is easily solved by splitting it into two
+first-order equations and introducing a new variable $b(t)$ and solving
+for
+\begin{equation}
+a'=b, \quad b'=(b^2/2a)(1-3w);
+\end{equation}
+see Refs.~\cite{HRPB23,BP23} for similar work in another context.
+
+\Fig{pprof} shows the solution for $a(t)$ and the ratios
+$a'/a$ and $a''/a$ compensated by $t$ and $t^2$, respectively,
+which allows us to see more clearly how $a'/a$ changes from $2/t$
+to $1/t$ and $a''/a$ changes from $2/t^2$ to zero as we go from the
+reheating era to the radiation-dominated Universe after reheating.
+
+\begin{figure}[t!]
+\hspace{-16pt}\includegraphics[width=\columnwidth]{pprof}
+\caption[]{
+$t$ dependence of
+(a)~the scale factor $a(t)$,
+(b)~the compensated Hubble coefficient ${\cal H}t=t\,a'/a$, and
+(c)~the compensated left-hand side of the Friedmann equation, $t^2\,a''/a$.
+In (a), the asymptotic dependences $a=t^2$ and $2t$ for $t\ll1$
+and $\gg1$ are overplotted as dashed-dotted orange lines.
+In (c), the function $3w(a(t))$
+is overplotted as a dotted red line.
+\label{pprof}}\end{figure}
+
+The sample \code{samples/1d-tests/inflationary-B-genesis} reads in a file
+\code{a_vs_eta.dat} with input
+\begin{verbatim}
+&run_pars
+  lread_scl_factor_file_new=T
+/
+\end{verbatim}
+which uses the subroutine \code{calc_scl_factor} in \code{sub.f90}.
 
 % ---------------------------------------------------------------------- %
 
@@ -15073,6 +15145,10 @@ A. Brandenburg, T. Kahniashvili, S. Mandal, A. Roper Pol, A. G. Tevzadze, and T.
   ``Dynamo-generated turbulence and large scale magnetic fields
   in a Keplerian shear flow''
 
+\bibitem{BP23} Brandenburg, A., \& Protiti, U.,
+  \emph{Entropy} \textbf{25}, 1270 (2023)
+  ``Electromagnetic conversion into kinetic and thermal energies''
+
 \bibitem{Collatz66}Collatz, L.,
   \emph{The numerical treatment of differential equations},
   Springer-Verlag, New York, p.\ 164 (1966)
@@ -15097,6 +15173,10 @@ Cambridge University Press (2008)
 \bibitem{HB04a}Haugen, N.~E.~L., \& Brandenburg, A.
   \emph{Phys.~Rev.~E} \textbf{70}, 026405 (2004)
   ``Inertial range scaling in numerical turbulence with hyperviscosity''
+
+\bibitem{HRPB23} He, Y., Roper Pol, A., \& Brandenburg, A.
+  \emph{J. Cosmol. Astropart. Phys.} \textbf{06}, 025 (2023)
+  ``Modified propagation of gravitational waves from the early radiation era''
 
 \bibitem{HockneyEastwood1981}Hockney, R.~W., \& Eastwood, J.~W.,
   \emph{Computer Simulation Using Particles},
