manual: add missing \item in list of papers in preamble

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -651,135 +651,162 @@ several of the following (or other appropriate) papers (listed here in temporal 
 \newcommand{\tmn}[2]{:~#1, ``#2,'' {\em Monthly Notices Roy. Astron. Soc.} (to be submitted)}
 
 \begin{list}{}{\leftmargin 3em \itemindent -3em\listparindent \itemindent
-\itemsep 0pt \parsep 1pt}\item[]
+\itemsep 0pt \parsep 1pt}
 
 % -- Isotropic homogeneous hydro turbulence --
+\item
 Dobler, W., Haugen, N. E. L., Yousef, T. A., \&
 Brandenburg, A.\yprN{2003}{E 68}{026304}
 {1-8}{Bottleneck effect in three-dimensional turbulence simulations}
 (\astroph{0303324})
 
 % -- Isotropic homogeneous MHD turbulence --
+\item
 Haugen, N. E. L., Brandenburg, A., \& Dobler, W.\yapjlS{2003}{597}{L141}
 {L144}{Is nonhelical hydromagnetic turbulence peaked at small scales?}
 (\astroph{0303372})
 
 % -- Passive scalar diffusion --
+\item
 Brandenburg, A., K\"apyl\"a, P., \& Mohammed, A.\ypf{2004}{16}{1020}
 {1027}{Non-Fickian diffusion and tau-approximation from numerical turbulence}
 (\astroph{0306521})
 
 % -- Dust in the fluid approximation --
+\item
 Johansen, A., Andersen, A. C., \& Brandenburg, A.\yana{2004}{417}{361}
 {371}{Simulations of dust-trapping vortices in protoplanetary discs}
 (\astroph{0310059})
 
 % -- Supersonic turbulence --
+\item
 Haugen, N. E. L., Brandenburg, A., \& Mee, A. J.\ymn{2004}{353}{947}
 {952}{Mach number dependence of the onset of dynamo action}
 (\astroph{0405453})
 
 % -- Homochirality --
+\item
 Brandenburg, A., \& Multam\"aki, T.\yjourS{2004}{Int.\ J.\ Astrobiol.}{3}{209}
 {219}{How long can left and right handed life forms coexist?}
 (\qbio{0407008})
 
 % -- Geodynamo --
+\item
 McMillan, D. G., \& Sarson, G. R.\ypepi{2005}{153}{124}
 {135}{Dynamo simulations in a spherical shell of ideal gas using a
 high-order Cartesian magnetohydrodynamics code}
 
 % -- Radiation transfer --
+\item
 Heinemann, T., Dobler, W., Nordlund, \AA., \&
 Brandenburg, A.\yana{2006}{448}{731}
 {737}{Radiative transfer in decomposed domains}
 (\astroph{0503510})
 
 % -- Star-in-a-box simulation --
+\item
 Dobler, W., Stix, M., \& Brandenburg, A.\yapj{2006}{638}{336}
 {347}{Convection and magnetic field generation in fully convective spheres}
 (\astroph{0410645})
 
 % -- Cosmic ray diffusion --
+\item
 Snodin, A. P., Brandenburg, A., Mee, A. J., \& Shukurov, A.\ymn{2006}{373}{643}
 {652}{Simulating field-aligned diffusion of a cosmic ray gas}
 (\astroph{0507176})
 
 % -- Dust represented as particles --
+\item
 Johansen, A., Klahr, H., \& Henning, T.\yapj{2006}{636}{1121}
 {1134}{Dust sedimentation and self-sustained Kelvin-Helmholtz turbulence
 in protoplanetary disc mid-planes}
 (\astroph{0512272})
 
 % -- Core accretion in the context of Code comparison --
+\item
 de Val-Borro, M. and 22 coauthors (incl.\ Lyra, W.)\ymn{2006}{370}{529}
 {558}{A comparative study of disc-planet interaction}
 (\astroph{0605237})
 
 % -- Self-gravity --
+\item
 Johansen, A., Oishi, J. S., Mac Low, M. M., Klahr, H., Henning, T.,
 \& Youdin, A.\ynat{2007}{448}{1022}
 {1025}{Rapid planetesimal formation in turbulent circumstellar disks}
 (\arXiv{0708.3890})
 
 % -- Global models of protoplanetary disks --
+\item
 Lyra, W., Johansen, A., Klahr, H., \& Piskunov, N.\yana{2008}{479}{883}
 {901}{Global magnetohydrodynamical models of turbulence in protoplanetary disks I. A cylindrical potential on a Cartesian grid and transport of solids}
 (\arXiv{0705.4090})
 
 % -- Test-field method --
+\item
 Brandenburg, A., R\"adler, K.-H., Rheinhardt, M., \& K\"apyl\"a, P. J.\yapj{2008}{676}{740}
 {751}{Magnetic diffusivity tensor and dynamo effects in rotating
 and shearing turbulence}
 (\arXiv{0710.4059})
 
 % -- Global simulations of planet formation --
+\item
 Lyra, W., Johansen, A., Klahr, H., \& Piskunov, N.\yana{2008}{491}{L41}{L44}{Embryos grown in the dead zone. Assembling the first protoplanetary cores in low-mass selfgravitating circumstellar disks of gas and solids}
 
 % -- N-body solver --
+\item
 Lyra, W., Johansen, A., Klahr, H., \& Piskunov, N.\yana{2009}{493}{1125}
 {1139}{Standing on the shoulders of giants. Trojan Earths and vortex trapping in low-mass selfgravitating protoplanetary disks of gas and solids}
 
 % -- Cylindrical grid --
+\item
 Lyra, W., Johansen, A., Zsom, A., Klahr, H., \& Piskunov, N.\yana{2009}{497}{869}
 {888}{Planet formation bursts at the borders of the dead zone in 2D numerical simulations of circumstellar disks}
 (\arXiv{0901.1638})
 
 % -- Spherical coordinates --
+\item
 Mitra, D., Tavakol, R., Brandenburg, A., \& Moss, D.\yapj{2009}{697}{923}
 {933}{Turbulent dynamos in spherical shell segments of varying geometrical extent} (\arXiv{0812.3106})
 
 % -- Particle impaction on a cylinder --
+\item
 Haugen, N. E. L., \& Kragset, S.\yjfm{2010}{661}{239}
 {261}{Particle impaction on a cylinder in a crossflow as function of Stokes and Reynolds numbers}
 
 % -- Nonlinear test-field method --
+\item
 Rheinhardt, M., \& Brandenburg, A.\yanaN{2010}{520}{A28}
 {Test-field method for mean-field coefficients with MHD background}
 (\arXiv{1004.0689})
 
 % -- Turbulent combustion --
+\item
 Babkovskaia, N., Haugen, N. E. L., Brandenburg, A.\yjour{2011}{J.\ Comp.\ Phys.}{230}{1}
 {12}{A high-order public domain code for direct numerical simulations of turbulent combustion}
 (\arXiv{1005.5301})
 
 % -- Particle Block Domain Decomposition (PBDD) --
+\item
 Johansen, A., Klahr, H., \& Henning, Th.\yanaN{2011}{529}{A62}
 {High-resolution simulations of planetesimal formation in turbulent protoplanetary discs}
 
 % -- superparticles --
+\item
 Johansen, A., Youdin, A. N., \& Lithwick, Y.\yanaN{2012}{537}{A125}
 {Adding particle collisions to the formation of asteroids and Kuiper belt objects via streaming instabilities}
 
 % -- photoelectric effect in debris disks --
+\item
 Lyra, W. \& Kuchner, W. \ynat{2013}{499}{184}{187}
 {Formation of sharp eccentric rings in debris disks with gas but without planets}
 
 % -- mutual drag force --
+\item
 Yang, C.-C., \& Johansen, A.\yapjs{2016}{224}{39}
 {Integration of Particle-Gas Systems with Stiff Mutual Drag Interaction}
 
 % -- gravitational waves --
+\item
 Roper Pol, A., Brandenburg, A. Kahniashvili, T., Kosowsky, A., \& Mandal, S.\ygafd{2020}{114}{130}
 {161}{The timestep constraint in solving the gravitational wave equations sourced by hydromagnetic turbulence}
 
