--- a/doc/citations/ref.bib
+++ b/doc/citations/ref.bib
@@ -17245,3 +17245,39 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2025ApJ...993...22B,
+       author = {{Brandenburg}, Axel and {Larsson}, Gustav and {Del Sordo}, Fabio and {K{\"a}pyl{\"a}}, Petri J.},
+        title = "{Magnetorotational Instability in a Solar Near-surface Mean-field Dynamo}",
+      journal = {\apj},
+     keywords = {Magnetic fields, 994, Solar and Stellar Astrophysics, Plasma Physics},
+         year = 2025,
+        month = nov,
+       volume = {993},
+       number = {1},
+          eid = {22},
+        pages = {22},
+          doi = {10.3847/1538-4357/ae03c4},
+archivePrefix = {arXiv},
+       eprint = {2504.16849},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...993...22B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025PhFl...37j5163L,
+       author = {{Lipatnikov}, Andrei N. and {Sabelnikov}, Vladimir A.},
+        title = "{A numerical study of velocity-pressure gradient and pressure-dilatation terms in transport equations for subfilter turbulent kinetic energy in premixed flames}",
+      journal = {Physics of Fluids},
+     keywords = {Turbulent Flows},
+         year = 2025,
+        month = oct,
+       volume = {37},
+       number = {10},
+          eid = {105163},
+        pages = {105163},
+          doi = {10.1063/5.0294306},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025PhFl...37j5163L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
