current version; message generated automatically on: Linux nl6 (brandenb)

--- a/doc/citations/ref.bib
+++ b/doc/citations/ref.bib
@@ -16189,7 +16189,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2025JPlPh..91E...5B,
        author = {{Brandenburg}, Axel and {Banerjee}, Aikya},
         title = "{Turbulent magnetic decay controlled by two conserved quantities}",
-      journal = {Journal of Plasma Physics},
+      journal = {J. Plasma Phys.},
      keywords = {astrophysical plasmas, plasma simulation, Physics - Plasma Physics},
          year = 2025,
         month = jan,
@@ -17267,7 +17267,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2025PhFl...37j5163L,
        author = {{Lipatnikov}, Andrei N. and {Sabelnikov}, Vladimir A.},
         title = "{A numerical study of velocity-pressure gradient and pressure-dilatation terms in transport equations for subfilter turbulent kinetic energy in premixed flames}",
-      journal = {Physics of Fluids},
+      journal = {Phys. Fluids},
      keywords = {Turbulent Flows},
          year = 2025,
         month = oct,
